adding images in page

--- a/images/.picasa.ini
+++ b/images/.picasa.ini
@@ -1,3 +1,17 @@
 [s7.jpg]
 filters=Border=1,0.000000,5.263158,0.000000,00000000,00ffffff,0.000000;
 backuphash=53672
+[DSC08438.JPG]
+backuphash=5364
+filters=autolight=1;
+[DSC_0168.jpg]
+filters=Border=1,0.000000,10.526316,0.000000,ffe8e8e8,00ffffff,0.000000;
+backuphash=42903
+[IMG-20170506-WA0010.jpg]
+backuphash=27225
+[a1.jpg]
+filters=Border=1,0.000000,5.000000,0.000000,00000000,00ffffff,0.000000;
+backuphash=6808
+[a2.jpg]
+filters=Border=1,0.000000,5.000000,0.000000,00000000,00ffffff,0.000000;
+backuphash=51783
