--- a/images/.picasa.ini
+++ b/images/.picasa.ini
@@ -15,3 +15,6 @@ backuphash=6808
 [a2.jpg]
 filters=Border=1,0.000000,5.000000,0.000000,00000000,00ffffff,0.000000;
 backuphash=51783
+[g11.jpg]
+filters=Border=1,0.000000,22.222223,0.000000,00000000,00ffffff,0.000000;
+backuphash=55643
