--- a/images/.picasa.ini
+++ b/images/.picasa.ini
@@ -18,3 +18,6 @@ backuphash=51783
 [g11.jpg]
 filters=Border=1,0.000000,22.222223,0.000000,00000000,00ffffff,0.000000;
 backuphash=55643
+[s11.jpg]
+filters=Border=1,0.000000,5.263158,0.000000,00000000,00ffffff,0.000000;
+backuphash=49409
